AC_INIT(lite/window.h)

AC_PREREQ(2.52)

AC_CANONICAL_TARGET

AM_CONFIG_HEADER(config.h)

AM_INIT_AUTOMAKE(LiTE, 0.8.10)
# Version info specification
# Release       CURRENT:REVISION:AGE version-info (library)
# 0.7.2         2:0:0 - lite.so.2.0.0
# 0.8.0         2:1:0 - lite.so.2.0.1
# 0.8.1         2:2:0 - lite.so.2.0.2
# 0.8.2         2:3:0 - lite.so.2.0.3
# 0.8.3         2:4:0 - lite.so.2.0.4
# 0.8.5         3:0:0 - lite.so.3.0.0
# 0.8.6         3:1:0 - lite.so.3.0.1
# 0.8.7         3:2:0 - lite.so.3.0.2
# 0.8.8         3:3:0 - lite.so.3.0.3
# 0.8.9         3:4:0 - lite.so.3.0.4
# 0.8.10        3:5:0 - lite.so.3.0.5

LITE_VERSION_INFO=3:5:0
AC_SUBST(LITE_VERSION_INFO)

AC_DISABLE_STATIC

AC_PROG_CC
AC_ISC_POSIX
AC_HEADER_STDC
AM_PROG_LIBTOOL


dnl Clear default CFLAGS
if test x"$CFLAGS" = x"-g -O2"; then
  CFLAGS=
fi
  
CFLAGS="-O3 -pipe $CFLAGS"

if test "x$GCC" = xyes; then
  CFLAGS="-Wall $CFLAGS"
fi


DFB_REQUIRED_VERSION=1.0.0

PKG_CHECK_MODULES(DFB, directfb >= $DFB_REQUIRED_VERSION)

AC_SUBST(DFB_REQUIRED_VERSION)
AC_SUBST(DFB_CFLAGS)
AC_SUBST(DFB_LIBS)

AC_CHECK_HEADERS(stdbool.h)

AC_ARG_WITH(fontdir, 
            [ --with-fontdir=DIR     specify runtime font directory],
            [LITEFONTDIR="$withval"], 
            [LITEFONTDIR=${datadir}/fonts/truetype] )
AC_SUBST(LITEFONTDIR)


AC_ARG_ENABLE(debug,
  [  --enable-debug          enable debugging support [[default=no]]],,
  enable_debug=no)
if test "$enable_debug" = "yes"; then
  CFLAGS="$CFLAGS -g3 -fno-inline"
  CPPFLAGS="$CPPFLAGS -DDIRECT_FORCE_DEBUG"
fi


DATADIR=$datadir
AC_SUBST(DATADIR)

CFLAGS="$CFLAGS -Werror-implicit-function-declaration"

AC_OUTPUT([
Makefile
data/Makefile
examples/Makefile
tests/Makefile
fonts/Makefile
lite/Makefile
leck/Makefile
lite.pc
leck.pc
])
